gcc/testsuite/rust/rustc/ui/issues/issue-59896.rs
#![deny(unused_imports)]

struct S;

fn main() {
    use S;  // { dg-error "" "" { target *-*-* } }

    let _s = S;
}

